* Fixes internal image format for GPU remapping. This should fix the "unsupported
  framebufferformat" error.
* Use own code for OpenGL intialization. Now freeglut is not needed anymore.
  (This should prevent the appearing of window when running "nona -g". Linux/Window only)
* Control point and mask editor retain viewpoint when changing zoom factor.

============================================================================================
Hugin 2015.0
* stability and speed improvements
* new stitching engine
* new blender verdandi
* own camera and lens database
* preview window: new tool to add or remove control points
* automatic exposure stack detection when loading images,
* fine-tune and auto-estimate functions are now projection aware
* PTBatcherGUI: more options for end of process
* PTBatcherGUI now shows the thumbnails when searching for images in directories.

============================================================================================
Hugin 2014.0
* inherit many of the libpano improvements (of version 2.9.19)
* the translation plane variables Tpy and Tpp have been added to the GUI 
  (better support for translation parameter, e.g. for nadir images, also pano with 
  translation parameters can now rotated)
* improvement of the GPU remapping code (bug fixes in the glue code, added some missing
  GPU transformation, now also fisheye lenses are supported by GPU code)
* better support for line control point in Control points tab (it still requires that 
  the same image is displayed left and right for full features, but also better support 
  for line control points above several images)
* obsolete programs matchpoint, nona_gui and PTBatcher have been removed
* outdated translation have been removed from the default install
* initialize the colour balance values during loading with EXIF values 
  (this information is only stored and decoded by some cameras 
  (mainly models by Panasonic, Pentax, Olympus, Nikon))
* improved the assistant