@@ -18,6 +18,7 @@ Hugin 2015.2
 * Use own code for OpenGL intialization. Now freeglut is not needed anymore.
   (This should prevent the appearing of window when running "nona -g". Linux/Window only)
 * Control point and mask editor retain viewpoint when changing zoom factor.
+* PTBatcherGUI: Minimize to tray is now user configurable.
 
 ============================================================================================
 Hugin 2015.0
